--- a/Onboarding UI/style.css
+++ b/Onboarding UI/style.css
@@ -16,15 +16,159 @@ body {
 
 .main-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    border: 1px solid red;
-    width: 60%;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 40px;
+    width: 65%;
     margin: 80px auto 0;
 }
 
 .ui {
     border-radius: 10px;
     background: #fff;
-    padding: 50px 0;
+}
+
+.header-cont {
+    background: #d1e2ff6e;
+    padding: 50px 0 0;
+    position: relative;
+}
+
+.header-content {
+    display: grid;
+    place-items: center;
+    width: 40%;
+    margin: auto;
+}
+
+.header-icon {
+    width: 6rem;
+    height: auto
+}
+
+.icon-2 {
+    width: 9.4rem;
+    height: auto;
+}
+
+.icon-3 {
+    width: 5.2rem;
+    height: auto;
+    margin-top: 15px;
+}
+
+article {
+    padding: 0 0 40px;
+}
+
+h3 {
+    color: #445DCB;
+    font-size: 1.3rem;
+    font-weight: 800;
+    text-align: center;
+    width: 60%;
+    margin: auto;
+}
+
+.round-cont_wrapper {
+    padding: 0 0 10px;
+    background: #d1e2ff2e;
+    border-radius: 0 0 0 60%;
+}
+
+.round-cont {
+    padding: 40px 0;
+    background: #d1e2ff45;
+    border-radius: 0 0 50% 50%;
+    position: relative;
+}
+
+.body-text {
+    width: 70%;
+    font-size: .88rem;
+    font-weight: 600;
+    line-height: 1.7;
+    text-align: center;
+    margin: 25px auto 35px;
+}
+
+.slide-indicator_cont {
+    text-align: center;
+    margin-bottom: 45px;
+    width: 100%;
+}
+
+.slide-indicator {
+    display: inline-block;
+    width: .38rem;
+    height: .40rem;
+    border-radius: 8px;
+    background: #cecece;
+}
+
+.slide-indicator div {
+    width: .37rem;
+    height: .41rem;
+    border-radius: 5px;
+    background: #445DCB;
+    display: block;
+}
+
+.btn-container {
+    display: flex;
+    width: 70%;
+    margin: 0 auto;
+    justify-content: space-between;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.btn {
+    padding: 13px 33px;
+    border-radius: 50px;
+}
+
+.skip-btn {
+    background: #b7c3d659;
+    color: #757883;
+    font-weight: bold;
+    margin-right: 3px;
+}
+
+.next-btn {
+    background: #445DCB;
+    color: #fff;
+    font-weight: bold;
+}
+
+
+/* Media Query */
+
+@media (max-width: 901px) {
+    .main-container {
+        grid-template-columns: repeat(auto-fit, minmax(215px, 1fr));
+        width: 80%;
+    }
+}
+
+@media (max-width: 752px) {
+    .main-container {
+        gap: 10px;
+        width: 95%;
+    }
+
+    .body-text {
+        width: 80%;
+    }
+
+    .btn-container {
+        display: flex;
+        width: 85%;
+    }
+
+    .btn {
+        padding: 12px 30px;
+    }
 }
