add "bottom margin" on main-cointainer

--- a/Onboarding UI/style.css
+++ b/Onboarding UI/style.css
@@ -181,7 +181,7 @@ a {
 
 @media (max-width: 400px) {
     .main-container {
-        margin: 25px auto 0;
+        margin: 25px auto;
         width: 85%;
     }
 
