add box shadow to ui component

--- a/Onboarding UI/style.css
+++ b/Onboarding UI/style.css
@@ -25,6 +25,7 @@ body {
 .ui {
     border-radius: 10px;
     background: #fff;
+    box-shadow: 0 20px 18px 0 rgba(103, 127, 208, 0.212);
 }
 
 .header-cont {
