fix: fix image moving out of center bug

--- a/Onboarding UI/style.css
+++ b/Onboarding UI/style.css
@@ -37,6 +37,7 @@ body {
 .header-content {
     display: grid;
     place-items: center;
+    justify-content: center;
     width: 40%;
     margin: auto;
 }
