--- a/Neumorphic UI Components/style.css
+++ b/Neumorphic UI Components/style.css
@@ -94,7 +94,7 @@ svg {
     background: #e8ebf7;
     place-items: center;
     border-radius: 8px;
-    box-shadow: inset 5px 5px 14px rgba(81, 87, 126, 0.205), inset -5px -5px 11px #fff;
+    box-shadow: inset 5px 5px 10px rgba(136, 165, 191, 0.34), inset -5px -5px 7px rgba(255, 255, 255, 0.788);
     text-align: center;
     padding: 10px 0;
     margin-bottom: 50px;
