--- a/Flight Booking App UI/style.css
+++ b/Flight Booking App UI/style.css
@@ -45,6 +45,7 @@ body {
     background: url("./assets/map.png") hsla(224, 22%, 90%, 0.836) no-repeat center center fixed;
     background-size: contain;
     -webkit-user-select: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 img {
@@ -109,6 +110,12 @@ main {
 .destination-to {
     border-radius: 16px;
     padding: 12px 18px;
+    cursor: pointer;
+}
+
+.destination-from:hover,
+.destination-to:hover {
+    opacity: .8;
 }
 
 .destination-top_text {
@@ -208,9 +215,6 @@ main {
     transform: translate(50%, -50%);
 }
 
-.btn:hover {
-    color: #dad0ee;
-}
 
 .btn:hover:before {
     -webkit-animation: pop-left 0.8s both;
@@ -410,17 +414,14 @@ ul {
     transform: translateX(18px);
 }
 
+.toggler:hover {
+    opacity: .95;
+}
+
 #toggle:checked+.toggler {
     transform: translateX(0);
 }
 
-#toggle:checked~.round-trip-text {
-    color: red;
-}
-
-.one-way {
-    display: none;
-}
 
 .details {
     display: block;
@@ -499,6 +500,11 @@ ul {
     background: rgba(223, 223, 223, 0.78);
 }
 
+.plus-minus_container img {
+    cursor: pointer;
+    pointer-events: visible;
+}
+
 .add-icon,
 .remove-icon {
     width: 24px !important;
@@ -530,7 +536,7 @@ ul {
 }
 
 .back-btn:hover {
-    background: hsla(0, 100%, 97%, 0.74);
+    background: hsla(305, 2%, 8%, 0.13);
 }
 
 .back-btn img {
