--- a/Flight Booking App UI/style.css
+++ b/Flight Booking App UI/style.css
@@ -115,7 +115,7 @@ main {
 
 .destination-from:hover,
 .destination-to:hover {
-    opacity: .8;
+    border: 1px solid red;
 }
 
 .destination-top_text {
@@ -551,7 +551,7 @@ ul {
         grid-template-columns: 1fr;
         grid-gap: 30px;
         width: 350px;
-        margin: auto;
+        margin: 25px auto;
         justify-content: center;
     }
 
