--- a/Flight Booking App UI/style.css
+++ b/Flight Booking App UI/style.css
@@ -345,6 +345,7 @@ ul {
     background: var(--white-color);
     border-radius: 25px;
     padding: 25px 25px 1px 0;
+    box-shadow: 0px 0px 46px -23px rgba(78, 77, 77, 0.4);
 }
 
 .details-widget h3 {
