--- a/Flight Booking App UI/style.css
+++ b/Flight Booking App UI/style.css
@@ -115,7 +115,7 @@ main {
 
 .destination-from:hover,
 .destination-to:hover {
-    border: 1px solid red;
+    border: 1px solid rgba(194, 194, 194, 0.432);
 }
 
 .destination-top_text {
